deployment/grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: grafana
  name: grafana
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.monitoring.namebase.io
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.monitoring.namebase.io
    secretName: monitoring-grafana-tls-secret
